--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,28 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'yjm'
+            keyPassword '512245'
+            storeFile file('C:/Users/Administrator/Desktop/3AS_Project/yjm.jks')
+            storePassword '512245'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.xd.commander.aku"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.5"
         useLibrary 'org.apache.http.legacy'
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
